--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     ],
     "version": "1.1",
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "fzaninotto/faker": "^1.6",
+        "dariuszp/cli-progress-bar": "^1.0"
     },
     "autoload": {
         "psr-4": {
