--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "jlaso/simple-memory-db",
     "description": "A simple db in memory",
-    "keywords": ["memory", "db"],
+    "keywords": ["memory", "db", "json"],
     "homepage": "https://github.com/jlaso/simple-memory-db",
     "type": "library",
     "license": "MIT",
@@ -11,7 +11,7 @@
             "role": "Developer"
         }
     ],
-    "version": "1.1",
+    "version": "1.3",
     "require": {
         "php": ">=5.4",
         "fzaninotto/faker": "^1.6",
