--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
             "role": "Developer"
         }
     ],
-    "version": "1.3",
+    "version": "1.4",
     "require": {
         "php": ">=5.4",
         "fzaninotto/faker": "^1.6",
         "dariuszp/cli-progress-bar": "^1.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "5.1.*"
     },
     "autoload": {
         "psr-4": {
