--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "role": "Developer"
         }
     ],
-    "version": "1.4",
+    "version": "1.5",
     "require": {
         "php": ">=5.4",
         "fzaninotto/faker": "^1.6",
@@ -22,7 +22,8 @@
     },
     "autoload": {
         "psr-4": {
-            "JLaso\\SimpleMemoryDb\\": "src/"
+            "JLaso\\SimpleMemoryDb\\": "src/",
+            "JLaso\\SimpleMemoryDb\\Tests\\": "Tests/"
         }
     },
     "minimum-stability": "dev"
