--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,13 @@
         "dariuszp/cli-progress-bar": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.1.*"
+        "phpunit/phpunit": "5.1.*",
+        "bruli/php-git-hooks": "^4.7",
+        "friendsofphp/php-cs-fixer": "^1.12",
+        "squizlabs/php_codesniffer": "^2.7",
+        "phpmd/phpmd": "^2.4",
+        "leaphub/phpcs-symfony2-standard": "^2.0",
+        "phploc/phploc": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -26,5 +32,16 @@
             "JLaso\\SimpleMemoryDb\\Tests\\": "Tests/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "scripts": {
+        "post-install-cmd": [
+            "PhpGitHooks\\Infrastructure\\Composer\\ConfiguratorScript::buildConfig"
+        ],
+        "post-update-cmd": [
+            "PhpGitHooks\\Infrastructure\\Composer\\ConfiguratorScript::buildConfig"
+        ]
+    },
+    "config": {
+        "bin-dir": "bin"
+    }
 }
